# xynergy

./: .env.example  .gitignore  AUTHENTICATION.md  Cargo.toml  DATABASE_SETUP.md  FRONTEND_BUILD.md  README.md  build-frontend.sh  docker-compose.yml  package-lock.json  package.json
.sqlx/: query-021d0e925a801f566e8530208b689679b9a513e858a41fbff44eba9d141c653b.json  query-02fe250cc37ed8d4285414dc9df7bf7decd51879f397cb5dcfd6b80d193443ff.json  query-0463c7254239ab0d35d743017ca4ec9d39c598c3a60b212677533ab81e5818ba.json  query-04f27bb5d8ccf1b3da2d3b90ce4444d739b6fe4835bd10373b5a936b6118182a.json  query-0535e484428082bf0cd524e3f66d2d52f50cdfd93be7431707d11dc1eb0b7159.json  query-0938278d5c731a5030c2538786356e16c4ed4c1dec4e65d559da3fb6e3cef643.json  query-0ac1da91bdb3732ce91eaa8d566915bc74d7a739fee9b4a21dfc5473a180e4f1.json  query-116eee1f260ac19ef5964d158f6710f9a210b1bc498819c36689fe53e89dc516.json  query-1fd3b7034c006845753789e54e35a0c3f860b7e6f742f818aee45077e49d2445.json  query-229a43d5961d3d8d6ff419cdf2486ba8e349b0ad4f3bb5a482e86ac7e03515c0.json  query-2816ef7638e775c762c4f187519ef0d540dbdea0f28a4bf4666578253edd553e.json  query-2d3e40645e4523157350cbcd55d0237a59fb65d9ee003cd36c8a8f26e61130d7.json  query-2d5fb5949891c638eedd0b1ce6bf0e5872b3db538345d96bbe37e2f055b725ae.json  query-306e3428b121b22c5baa784f3f9a287388f616f077d9ea7bdd687da26dc3d6d6.json  query-33c1757a875deef054a530d2a3e07b04f712ec6337787097a44eefded5a434e9.json  query-3917c0308ee6ff137ba0ab30945923b285297fbbcd2313084a697e37ca3e0055.json  query-3a1a0228394d46bf61eb3e4b0fd74e419e910d454f792a2d02a1f42fdee666df.json  query-3b1cfacbb7eae75fe4b5c143eb106482e9b50964c6d2deb47c22145837d9c7ce.json  query-3d45426a2e0b887fa4d5bd87136479a4d865a100f28ceba8b3864571bc0e26aa.json  query-3f3d9d5e39a9e94c8f56ccd3e3d8ebeecf9b16529bd112e54a1d2100d65dbc08.json  query-459574f941b06bfe434d5497cd9094ae94554c705d037a5e9f50c6d3d8c2444b.json  query-4762346ab0cb401cbe193c583247bd7c5a8df9922c265031fc51c038933aabe4.json  query-4b285d821f91a35305c9cb9feffc7c97614cb53cc38b4d3b530cc6e528f99344.json  query-521c631d42d6166e4960bff395cbd30e8a516cffd6e6aa37aad70ba5bb5dda65.json  query-54ee33a2f1dc78c308bf750cfb0f473156aa3f62bf3c8b61f6fdd398d0c5a81f.json  (+47 more)
docs/: index.md  (+12 more)
src/backend/: Cargo.toml
src/backend/examples/: hash_password.rs
src/backend/src/: config.rs  error.rs  lib.rs  main.rs
src/backend/src/db/: mod.rs
src/backend/src/middleware/: auth.rs
src/backend/src/models/: allocation.rs  department.rs  mod.rs  project.rs  resource.rs  user.rs
src/backend/src/routes/: allocation.rs  audit_log.rs  auth.rs  ctc.rs  department.rs  holiday.rs  mod.rs  project.rs  resource.rs  team.rs  thr.rs  user.rs
src/backend/src/services/: audit_log.rs  budget_service.rs  compliance_report.rs  cost_preview.rs  ctc_calculator.rs  ctc_completeness.rs  ctc_crypto.rs  ctc_validator.rs  key_provider.rs  mod.rs  project_cost_service.rs  project_revenue_service.rs  project_service.rs  rbac.rs  rls_context.rs  team_service.rs  thr_calculator.rs
src/backend/tests/: assignment_tests.rs  audit_tests.rs  auth_tests.rs  budget_tests.rs  cost_preview_tests.rs  ctc_encryption_tests.rs  ctc_revision_tests.rs  ctc_tests.rs  ctc_validation_tests.rs  overallocation_tests.rs  project_budget_tests.rs  project_expense_tests.rs  project_resource_cost_tests.rs  project_revenue_tests.rs  rbac_tests.rs  rls_tests.rs  team_tests.rs  thr_tests.rs
src/frontend/: Cargo.toml  README.md  package-lock.json  package.json
src/frontend/public/: index.html  output.css
src/frontend/src/: auth.rs  gantt.rs  lib.rs  timeline.rs
src/frontend/src/components/: allocation_form.rs  department_form.rs  gantt_chart.rs  holiday_form.rs  mod.rs  project_form.rs  project_list.rs  resource_form.rs  resource_list.rs  resource_sidebar.rs  settings_sidebar.rs  timeline_chart.rs  user_form.rs
src/frontend/src/pages/: allocations.rs  ctc.rs  ctc_completeness.rs  dashboard.rs  holidays.rs  home.rs  login.rs  mod.rs  not_found.rs  projects.rs  resources.rs  settings.rs  team.rs  thr.rs  users.rs
src/frontend/src/pages/departments/: departments_content.rs  mod.rs
src/frontend/src/pages/holidays/: holidays_content.rs  mod.rs
src/frontend/src/pages/users/: mod.rs  users_content.rs
src/frontend/style/: tailwind.css
src/shared/: Cargo.toml
src/shared/src/: lib.rs
src/shared/src/models/: mod.rs
(+68 files in other folders)
