[package]
name = "xynergy-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "xynergy-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
xynergy-shared = { workspace = true }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }

# Authentication
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand = "0.8"
sha2 = "0.10"

# Environment
dotenvy = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Decimal support
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
